# axiom

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: decisions.md
migrations/: 001_initial_schema.sql
src/axiom/: __init__.py  config.py  db.py  redis_client.py
src/axiom/contracts/: __init__.py  enums.py  events.py
src/axiom/ingress/: __init__.py  app.py  repository.py  schemas.py
src/axiom/relay/: __init__.py  __main__.py  relay.py  runner.py
src/axiom/worker/: __init__.py  __main__.py  execution.py  runner.py  worker.py
tests/: conftest.py
tests/contracts/: __init__.py  test_enums.py  test_events.py
tests/ingress/: __init__.py  test_app.py  test_repository.py
tests/relay/: __init__.py  test_relay.py  test_runner.py
tests/worker/: __init__.py  test_execution.py  test_runner.py  test_worker.py
